# TailHub

./: .gitignore  README.md  alias.sh  install.sh  main.py  pyproject.toml  run.sh  send_demo.py
tailhub/: app.py  config.py  tailscale.py
tailhub/routes/: files.py  status.py
tailhub/static/: index.html
tailhub/static/css/: style.css
tailhub/static/js/: app.js  files.js  network.js
