[project]
name = "tailhub"
version = "0.1.0"
description = "A modern web interface for Tailscale Taildrop file transfers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "qrcode[pil]>=8.2",
]
